// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> rendering matches snapshot when lit 1`] = `
<DocumentFragment>
  <td
    class="Cell Cell-lit"
    role="button"
  />
</DocumentFragment>
`;

exports[`<Cell /> rendering matches snapshot when not lit 1`] = `
<DocumentFragment>
  <td
    class="Cell "
    role="button"
  />
</DocumentFragment>
`;
